# persona_selection_experiments

./: .gitignore  README.md  pyproject.toml
configs/: default_llama1b_pilot.yaml  default_llama3b_pilot.yaml  default_smollm2_pilot.yaml  smoke_test.yaml  smollm2_base_sft_l50_pilot.yaml
data/: README.md
data/eval_prompts/: deception_100.jsonl  harmful_100.jsonl  jailbreak_100.jsonl  neutral_200.jsonl  sycophancy_100.jsonl  vulnerable_user_100.jsonl
data/eval_prompts/reports/: deception_100.report.json  harmful_100.report.json  jailbreak_100.report.json  neutral_200.report.json  (+2 more)
data/personas/: aa_roles_50.jsonl  role_clusters_v1.json
data/questions/: aa_shared_questions_50.jsonl
data/templates/: aa_role_instructions_2.jsonl  aa_role_instructions_2.report.json
scripts/: 00_validate_config.py  01_generate_role_rollouts.py  02_extract_role_activations.py  03_build_role_vectors.py  04_check_persona_alignment.py  05_generate_eval_rollouts.py  06_extract_eval_activations.py  07_score_eval_against_roles.py  08_aggregate_scores.py  09_make_figures.py  10_export_hf_dataset.py  prepare_eval_deception.py  prepare_eval_harmful.py  prepare_eval_jailbreak.py  prepare_eval_neutral.py  prepare_eval_sycophancy.py  prepare_eval_vulnerable_user.py  prepare_role_inputs.py  validate_eval_prompts.py
src/persona_exp/: __init__.py  activation_extract.py  aggregation.py  alignment.py  analysis.py  config.py  formatting.py  generation.py  hf_export.py  hooks.py  io.py  model_loader.py  pooling.py  registry.py  scoring.py  utils.py  vector_building.py
tests/: test_core.py
(+16 files in other folders)
