[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-selection-experiments"
version = "0.1.0"
description = "Persona selection / assistant persona distribution experiment pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyarrow>=14.0",
  "pyyaml>=6.0",
  "safetensors>=0.4",
  "tqdm>=4.66",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "transformers>=4.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

